<resources>
    <string name="app_name">ZenitGatekeeper</string>
    <string name="alarm_type_skalskydd">Skalskydd</string>
    <string name="alarm_type_alarm">Alarm</string>
    <string name="arming">Arming</string>
    <string name="disarming">Disarming</string>
    <string name="alarm_state_disarmed">Disarmed</string>
    <string name="alarm_state_armed">Armed</string>
    <string name="alarm_type">AlarmType</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_fibaro_server_general">Fibaro server settings</string>
    <string name="pref_external_server_general">External server settings</string>
    <string name="pref_general_application_settings">Application settings</string>
    <string name="pref_title_ext_auth_server_ip">External Authentication server adress(:port)</string>
    <string name="pref_default_external_auth_server_ip" translatable="false">192.168.2.50:8080</string>
    <string name="pref_title_ext_arm_alarm_url">Arm alarm url</string>
    <string name="pref_default_ext_arm_alarm_url" translatable="false">/authenticate?action=armAlarm</string>
    <string name="pref_title_ext_disarm_alarm_url">Disarm alarm url</string>
    <string name="pref_default_ext_disarm_alarm_url" translatable="false">/authenticate?action=disarmAlarm&amp;pin=</string>
    <string name="pref_title_ext_arm_shell_url">Arm shell url</string>
    <string name="pref_default_ext_arm_shell_url" translatable="false">/authenticate?action=armSkalskydd</string>
    <string name="pref_title_ext_disarm_shell_url">Disarm shell url</string>
    <string name="pref_default_ext_disarm_shell_url" translatable="false">/authenticate?action=disarmSkalskydd&amp;pin=</string>
    <string name="pref_title_display_name">Fibaro server adress</string>
    <string name="pref_default_display_name">192.0.0.0</string>
    <string name="pref_title_arm_alarm_button_id">Button id to arm alarm </string>
    <string name="pref_title_disarm_alarm_button_id">Button id to disarm alarm</string>
    <string name="pref_title_arm_shell_button_id">Button id to arm shell protection</string>
    <string name="pref_title_disarm_shell_button_id">Button id to disarm shell protection </string>
    <string name="pref_default_arm_scene" translatable="false">34</string>
    <string name="pref_title_external_server_authentication">Authenticate via external server</string>
    <string name="title_activity_listviewtest">Listviewtest</string>
    <string name="title_activity_alarm_controller_settings">Settings</string>
    <string name="pref_title_escaping_time">Escape time</string>
    <string name="pref_default_escaping_time" translatable="false">30</string>
    <string name="pref_summary_escaping_time">Sets the count down timer when arming alarm</string>
    <string name="pref_protect_settings">Pin code for settings menu </string>
    <string name="pref_default_protect_settings" translatable="false">1234</string>
    <string name="pref_summary_protect_settings">Pin code to protect settings menu from unauthorized access.</string>
    <string name="pref_title_wake_up_service">Enable screen wakeup service</string>
    <string name="pref_summary_wake_up_service">Enables screen wakeup service</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="pref_title_screen_wakeup">Screen WakeUp</string>
    <string name="pref_summary_http_service">Enabling http services will start a http server and listen for incoming http requests. At reception of a http request a matching service will be invoked. </string>
    <string name="pref_summaryon_http_service">Http server is started</string>
    <string name="pref_summaryoff_http_service">Http server is not running</string>
    <string name="pref_summary_wakeup_service">Will turn on screen at reception of a wakeup request.</string>
    <string name="pref_summaryon_wakeup_service">Turn on the screen on received wakeup request</string>
    <string name="pref_summaryoff_wakeup_service">Wakeup service is disabled</string>
    <string name="pref_title_future_features">Future features</string>
    <string name="pref_summary_coming_features">Below lists coming features, if I manage to implement them</string>
    <string name="pref_title_fibaro_server_enabled">Control via Fibaro server</string>
    <string name="pref_summary_fibaro_server_enabled">Enable to send requests directly to the Fibaro system.</string>
    <string name="pref_title_required_configuration">Required configuration</string>
    <string name="pref_summary_required_configuration">Following settings are mandatory, and are used to fetch the current state of the Fibaro security system. At least one Fibaro user needs to be configured.</string>
    <string name="pref_message_no_network_connection">No wifi network connection available.</string>
    <string name="pref_message_configuration_not_ok">Configuration is not ok, update configuration.</string>
    <string name="pref_message_no_server_enabled">No authentication server enabled.</string>
    <string name="pref_message_welcome_home">"Welcome home "</string>
    <string name="pref_message_faulty_password">Faulty password</string>
    <string name="pref_title_telegram">Telegram settings</string>
    <string name="pref_summary_telegram">Enable application to send telegram messages to a bot.</string>
    <string name="pref_title_telegram_token">Telegram token</string>
    <string name="pref_summary_telegram_token">The generated Telegram token</string>
    <string name="pref_title_telegram_chatid">Chat Id</string>
    <string name="pref_summary_telegram_chat_id">The Telegram chat id</string>
    <string name="pref_url_telegram_send_message" translatable="false"><![CDATA[https://api.telegram.org/bot<token>/sendMessage?chat_id=<chatId>&text=]]></string>
    <string name="prf_title_external_server_enabled">External server</string>
    <string name="pref_summary_external_server_enabled">Enable to send requests to an external server.</string>
    <string name="pref_title_camera">Camera</string>
    <string name="pref_title_enable_telegram_messages">Enable sending Telegram messages</string>
    <string name="pref_summary_on_enable_telegram_messages">Send message to Telegram</string>
    <string name="preff_title_fibaro_general_settings">Fibaro general settings</string>
    <string name="pref_summary_general_fibaro_settings">General Fibaro settings</string>
    <string name="pref_summary_fibaro_server_settings">Configuration when authenticating and arming/disarming directly with Fibaro system.</string>
    <string name="pref_summary_external_server_settings">Configuration when using an external server to perform pincode authentication and arming/disarming the Fibaro system.</string>
    <string name="pref_title_fibaro_variable_alarmstate">Global variable that keeps the current alarm state</string>
    <string name="pref_title_fibaro_variable_alarmstate_armed">Armed state value</string>
    <string name="pref_title_fibaro_variable_alarmstate_disarmed">Disarmed state value</string>
    <string name="pref_summary_fibaro_variable_alarmtype">The variable needs to be configured as a global variable in the Fibaro system and should reflect the different type of alarms.\n Only two different protection types are currently supported (Alarm and Shell).\n Alarm = All devices are armed (door/window/motion sensors)\n Shell = Only the outer shell are armed (door/window sensors)</string>
    <string name="pref_title_fibaro_variable_alarmtype">Global variable that gives the current alarm type</string>
    <string name="pref_hint_fibaro_server_address">Configure the address to Fibaro server</string>
    <string name="pref_summary_fibaro_server_address">Configure the address to Fibaro server</string>
    <string name="pref_title_fibaro_users">Fibaro Users</string>
    <string name="pref_summary_fibaro_users">Configure Fibaro users</string>
    <string name="pref_title_desc_fibaro_variable_alarmtype">Fibaro global variable Alarm Type</string>
    <string name="pref_summary_desc_fibaro_variable_alarmtype">Configure Fibaro alarm type variable and possible values</string>
    <string name="pref_title_variable_alarmtype_fullhouse">Value during active alarm</string>
    <string name="pref_default_fibaro_variable_alarmtype_fullhouse">Alarm</string>
    <string name="pref_title_fibaro_variable_alarmtype_perimeter">Value during active perimeter alarm</string>
    <string name="pref_default_fibaro_variable_alarmtype_permiter">Shell</string>
    <string name="pref_summary_general_application_settings">General Application settings</string>
    <string name="pref_title_fibaro_general_settings">Fibaro general settings</string>
    <string name="pref_summary_fibaro_general_settings">General Fibaro settings</string>
    <string name="pref_summary_fibaro_server_general">Configuration when authenticating and arming/disarming directly with Fibaro system.</string>
    <string name="pref_summary_external_server_general">Configuration when using an external server to perform pincode authentication and arming/disarming the Fibaro system.</string>
    <string name="pref_summary_on_camera">Takes picture at disarm attempt</string>
    <string name="pref_summary_off_camera">No picture is taken at disarm attempt</string>
    <string name="pref_title_unlock_settings_menu">Unlock settings menu</string>
    <string name="pref_text_password">Password</string>
    <string name="pref_test_take_picture">Take Picture</string>
    <string name="pref_text_view_alarmkeypad">Start Keypad mode</string>
    <string name="pref_title_config_fibaro_users">Configure Fibaro users</string>
    <string name="pref_text_fibaro_users">The list should contain all the users that will use the keypad, the user and password must equal the configuration on the fibaro system. You should only have one default user, this user will be used when fetching the alarm status from the fibaro system.</string>
    <string name="pref_text_fibaro_user">Fibaro user:</string>
    <string name="pref_text_fibaro_password">Fibaro password</string>
    <string name="pref_text_pin">Pin</string>
    <string name="pref_text_default_user">Default user</string>
    <string name="pref_message_password_not_configured">Password for default user not configured</string>
    <string name="pref_message_default_user_not_configured">Default user not configured</string>
    <string name="pref_title_external_server">External server</string>
    <string name="pref_summary_external_server">Enable to send requests to an external server.</string>
    <string name="pref_hint_configure_fibaro_server_address">Configure the address to Fibaro server</string>
    <string name="pref_summary_configure_fibaro_users">Configure Fibaro users</string>
    <string name="pref_message_alarm_disarmed_by">" disarmed the "</string>
    <string name="pref_message_faulty_disarm_attempt">A faulty disarm attempt has occured.</string>
    <string name="pref_message_about_contact">Contact davan_at_work@hotmail.com</string>
    <string name="pref_title_user_add">Add user</string>
    <string name="pref_title_user_edit">Edit user</string>
    <string name="pref_button_delete_user">Delete</string>
    <string name="pref_button_save_user">Save</string>
    <string name="pref_title_close_user">Close</string>
    <string name="pref_message_fibaro_server_address_not_configured">Fibaro server address not configured</string>
    <string name="pref_message_no_procedure_server_configured">Either Fibaro server procedure or External server procedure needs to be configured.</string>
    <string name="pref_message_both_fibaro_and_external_server_configured">Both Fibaro server procedure or External server procedure is currently configured.</string>
</resources>