<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <SwitchPreference
        android:key="ext_server_enabled"
        android:title="External server"
        android:selectable="false"
        android:summary="Enable to send requests to an external server."
        android:defaultValue="false" />
    <EditTextPreference
        android:key="ext_auth_server_address"
        android:dependency="ext_server_enabled"
        android:title="@string/pref_title_ext_auth_server_ip"
        android:defaultValue="@string/pref_default_external_auth_server_ip"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />
    <EditTextPreference
        android:key="ext_arm_shell_url"
        android:dependency="ext_server_enabled"
        android:defaultValue="@string/pref_default_ext_arm_shell_url"
        android:title="@string/pref_title_ext_arm_shell_url"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />
    <EditTextPreference
        android:key="ext_disarm_shell_url"
        android:dependency="ext_server_enabled"
        android:title="@string/pref_title_ext_disarm_shell_url"
        android:defaultValue="@string/pref_default_ext_disarm_shell_url"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />
    <EditTextPreference
        android:key="ext_arm_alarm_url"
        android:dependency="ext_server_enabled"
        android:title="@string/pref_title_ext_arm_alarm_url"
        android:defaultValue="@string/pref_default_ext_arm_alarm_url"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />
    <EditTextPreference
        android:key="ext_disarm_alarm_url"
        android:dependency="ext_server_enabled"
        android:title="@string/pref_title_ext_disarm_alarm_url"
        android:defaultValue="@string/pref_default_ext_disarm_alarm_url"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />
</PreferenceScreen>

